css/style.css
body, html {
  margin: 0;
  padding: 0;
  font-family: 'Oswald', sans-serif;
  font-size: 30px;
  text-align: center;
  background-image: url("https://images.unsplash.com/photo-1511184150666-9bb7d41a88f4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60");
  background-size: cover;
  background-attachment: fixed;
}
#easybackground {
  background-image: url("https://www.washingtonpost.com/resizer/LaN2To2gnlQW-XkqMODPZanrZVk=/957x0/arc-anglerfish-washpost-prod-washpost.s3.amazonaws.com/public/QH2XL2QWVZEJND5Z6OSSQXYZJM.PNG");
  background-size: cover;
  background-attachment: fixed;
}
#title {
  font-family: 'Lobster', cursive;
}
#gamerules {
  width: 80%;
  margin-left: auto;
  margin-right: auto;
  background-color: rgba(211, 209, 182, 0.2);
  border-radius: 15px;
}
#easylevel, #hardlevel, #mediumlevel {
  font-family: 'Oswald', sans-serif;
  font-size: 30px;
  opacity: 0.5;
}
h2 {
  font-family: 'Lobster', cursive;
}
h3, p {
  background-color: rgba(211, 209, 182, 0.5);
  border-radius: 15px;
  width: 41%;
  margin-left: auto;
  margin-right: auto;
}
a {
  text-decoration-color: none;
  text-decoration-line: none;
  color: black;
  display: inline-block;
  border: 1px solid black;
  margin: 10px;
  padding: 5px;
  border-radius: 10px;
  background-color: rgba(211, 209, 182, 0.5);
}
button {
  font-family: 'Oswald', sans-serif;
  margin-left: auto;
  margin-right: auto;
  margin-top: 5px;
  margin-bottom: 5px;
  padding: 5px;
  font-size: 20px;
  border: 0.5px solid black;
}
img {
  height: 175px;
  width: 175px;
}
#easystartgame, #mediumstartgame, #hardstartgame {
  background-color: rgba(150, 196, 60, 0.5);
  border-radius: 0 0 10px 10px;
  width: 250px;
}
#easyplaynewgame, #mediumplaynewgame, #hardplaynewgame {
  background-color: rgba(92, 119, 36, 0.5);
  border-radius: 0 0 10px 10px;
  width: 250px;
}
.scores {
  font-size: 25px;
  display: inline;
}

#gridboxeasy {
  background-color:  rgba(211, 209, 182, 0.5);
  margin-left: 250px;
  margin-right: 250px;
  border-radius: 15px;
  padding: 20px;
  display: grid;
  justify-content: center;
  grid-gap: 20px;
  grid-template-rows: 175px 175px 175px 175px;
  grid-template-columns: 175px 175px 175px 175px;
  grid-template-areas:
    "e11 e12 e13 e14"
    "e21 e22 e23 e24"
    "e31 e32 e33 e34"
    "e41 e42 e43 e44";
}
#e11 {
  grid-area: e11;
  border: 1px solid rgba(211, 209, 182, 1);
  border-radius: 15px;
}
#e12 {
  grid-area: e12;
  border: 1px solid rgba(211, 209, 182, 1);
  border-radius: 15px;
}
#e13 {
  grid-area: e13;
  border: 1px solid rgba(211, 209, 182, 1);
  border-radius: 15px;
}
#e14 {
  grid-area: e14;
  border: 1px solid rgba(211, 209, 182, 1);
  border-radius: 15px;
}
#e21 {
  grid-area: e21;
  border: 1px solid rgba(211, 209, 182, 1);
  border-radius: 15px;
}
#e22 {
  grid-area: e22;
  border: 1px solid rgba(211, 209, 182, 1);
  border-radius: 15px;
}
#e23 {
  grid-area: e23;
  border: 1px solid rgba(211, 209, 182, 1);
  border-radius: 15px;
}
#e24 {
  grid-area: e24;
  border: 1px solid rgba(211, 209, 182, 1);
  border-radius: 15px;
}
#e31 {
  grid-area: e31;
  border: 1px solid rgba(211, 209, 182, 1);
  border-radius: 15px;
}
#e32 {
  grid-area: e32;
  border: 1px solid rgba(211, 209, 182, 1);
  border-radius: 15px;
}
#e33 {
  grid-area: e33;
  border: 1px solid rgba(211, 209, 182, 1);
  border-radius: 15px;
}
#e34 {
  grid-area: e34;
  border: 1px solid rgba(211, 209, 182, 1);
  border-radius: 15px;
}
#e41 {
  grid-area: e41;
  border: 1px solid rgba(211, 209, 182, 1);
  border-radius: 15px;
}
#e42 {
  grid-area: e42;
  border: 1px solid rgba(211, 209, 182, 1);
  border-radius: 15px;
}
#e43 {
  grid-area: e43;
  border: 1px solid rgba(211, 209, 182, 1);
  border-radius: 15px;
}
#e44 {
  grid-area: e44;
  border: 1px solid rgba(211, 209, 182, 1);
  border-radius: 15px;
}

#gridboxhard {
  background-color:  rgba(211, 209, 182, 0.5);
  border-radius: 15px;
  padding: 20px;
  display: grid;
  justify-content: center;
  grid-gap: 5px;
  grid-template-rows: repeat(10, 1fr);
  grid-template-columns: repeat(5, 1fr);
  grid-template-areas: 
    "h11 h12 h13 h14 h15 h16 h17 h18 h19 h110"
    "h21 h22 h23 h24 h25 h26 h27 h28 h29 h210"
    "h31 h32 h33 h34 h35 h36 h37 h38 h39 h310"
    "h41 h42 h43 h44 h45 h46 h47 h48 h49 h410"
    "h51 h52 h53 h54 h55 h56 h57 h58 h59 h510";
}
#h11 {
  grid-area: h11;
  border: 1px solid rgba(211, 209, 182, 1);
  border-radius: 15px;
}
#h12 {
  grid-area: h12;
  border: 1px solid rgba(211, 209, 182, 1);
  border-radius: 15px;
}
#h13 {
  grid-area: h13;
  border: 1px solid rgba(211, 209, 182, 1);
  border-radius: 15px;
}
#h14 {
  grid-area: h14;
  border: 1px solid rgba(211, 209, 182, 1);
  border-radius: 15px;
}
#h15 {
  grid-area: h15;
  border: 1px solid rgba(211, 209, 182, 1);
  border-radius: 15px;
}
#h16 {
  grid-area: h16;
  border: 1px solid rgba(211, 209, 182, 1);
  border-radius: 15px;
}
#h17 {
  grid-area: h17;
  border: 1px solid rgba(211, 209, 182, 1);
  border-radius: 15px;
}
#h18 {
  grid-area: h18;
  border: 1px solid rgba(211, 209, 182, 1);
  border-radius: 15px;
}
#h19 {
  grid-area: h19;
  border: 1px solid rgba(211, 209, 182, 1);
  border-radius: 15px;
}
#h110 {
  grid-area: h110;
  border: 1px solid rgba(211, 209, 182, 1);
  border-radius: 15px;
}
#h21 {
  grid-area: h21;
  border: 1px solid rgba(211, 209, 182, 1);
  border-radius: 15px;
}
#h22 {
  grid-area: h22;
  border: 1px solid rgba(211, 209, 182, 1);
  border-radius: 15px;
}
#h23 {
  grid-area: h23;
  border: 1px solid rgba(211, 209, 182, 1);
  border-radius: 15px;
}
#h24 {
  grid-area: h24;
  border: 1px solid rgba(211, 209, 182, 1);
  border-radius: 15px;
}
#h25 {
  grid-area: h25;
  border: 1px solid rgba(211, 209, 182, 1);
  border-radius: 15px;
}
#h26 {
  grid-area: h26;
  border: 1px solid rgba(211, 209, 182, 1);
  border-radius: 15px;
}
#h27 {
  grid-area: h27;
  border: 1px solid rgba(211, 209, 182, 1);
  border-radius: 15px;
}
#h28 {
  grid-area: h28;
  border: 1px solid rgba(211, 209, 182, 1);
  border-radius: 15px;
}
#h29 {
  grid-area: h29;
  border: 1px solid rgba(211, 209, 182, 1);
  border-radius: 15px;
}
#h210 {
  grid-area: h210;
  border: 1px solid rgba(211, 209, 182, 1);
  border-radius: 15px;
}
#h31 {
  grid-area: h31;
  border: 1px solid rgba(211, 209, 182, 1);
  border-radius: 15px;
}
#h32 {
  grid-area: h32;
  border: 1px solid rgba(211, 209, 182, 1);
  border-radius: 15px;
}
#h33 {
  grid-area: h33;
  border: 1px solid rgba(211, 209, 182, 1);
  border-radius: 15px;
}
#h34 {
  grid-area: h34;
  border: 1px solid rgba(211, 209, 182, 1);
  border-radius: 15px;
}
#h35 {
  grid-area: h35;
  border: 1px solid rgba(211, 209, 182, 1);
  border-radius: 15px;
}
#h36 {
  grid-area: h36;
  border: 1px solid rgba(211, 209, 182, 1);
  border-radius: 15px;
}
#h37 {
  grid-area: h37;
  border: 1px solid rgba(211, 209, 182, 1);
  border-radius: 15px;
}
#h38 {
  grid-area: h38;
  border: 1px solid rgba(211, 209, 182, 1);
  border-radius: 15px;
}
#h39 {
  grid-area: h39;
  border: 1px solid rgba(211, 209, 182, 1);
  border-radius: 15px;
}
#h310 {
  grid-area: h310;
  border: 1px solid rgba(211, 209, 182, 1);
  border-radius: 15px;
}
#h41 {
  grid-area: h41;
  border: 1px solid rgba(211, 209, 182, 1);
  border-radius: 15px;
}
#h42 {
  grid-area: h42;
  border: 1px solid rgba(211, 209, 182, 1);
  border-radius: 15px;
}
#h43 {
  grid-area: h43;
  border: 1px solid rgba(211, 209, 182, 1);
  border-radius: 15px;
}
#h44 {
  grid-area: h44;
  border: 1px solid rgba(211, 209, 182, 1);
  border-radius: 15px;
}
#h45 {
  grid-area: h45;
  border: 1px solid rgba(211, 209, 182, 1);
  border-radius: 15px;
}
#h46 {
  grid-area: h46;
  border: 1px solid rgba(211, 209, 182, 1);
  border-radius: 15px;
}
#h47 {
  grid-area: h47;
  border: 1px solid rgba(211, 209, 182, 1);
  border-radius: 15px;
}
#h48 {
  grid-area: h48;
  border: 1px solid rgba(211, 209, 182, 1);
  border-radius: 15px;
}
#h49 {
  grid-area: h49;
  border: 1px solid rgba(211, 209, 182, 1);
  border-radius: 15px;
}
#h410 {
  grid-area: h410;
  border: 1px solid rgba(211, 209, 182, 1);
  border-radius: 15px;
}
#h51 {
  grid-area: h51;
  border: 1px solid rgba(211, 209, 182, 1);
  border-radius: 15px;
}
#h52 {
  grid-area: h52;
  border: 1px solid rgba(211, 209, 182, 1);
  border-radius: 15px;
}
#h53 {
  grid-area: h53;
  border: 1px solid rgba(211, 209, 182, 1);
  border-radius: 15px;
}
#h54 {
  grid-area: h54;
  border: 1px solid rgba(211, 209, 182, 1);
  border-radius: 15px;
}
#h55 {
  grid-area: h55;
  border: 1px solid rgba(211, 209, 182, 1);
  border-radius: 15px;
}
#h56 {
  grid-area: h56;
  border: 1px solid rgba(211, 209, 182, 1);
  border-radius: 15px;
}
#h57 {
  grid-area: h57;
  border: 1px solid rgba(211, 209, 182, 1);
  border-radius: 15px;
}
#h58 {
  grid-area: h58;
  border: 1px solid rgba(211, 209, 182, 1);
  border-radius: 15px;
}
#h59 {
  grid-area: h59;
  border: 1px solid rgba(211, 209, 182, 1);
  border-radius: 15px;
}
#h510 {
  grid-area: h510;
  border: 1px solid rgba(211, 209, 182, 1);
  border-radius: 15px;
}

